[metadata]
name = bloom
version = 0.0.1
author = Petr Messner
author_email = petr.messner@gmail.com
description = Index files (log files etc.) using a bloom filter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/messa/bloom
project_urls =
    Bug Tracker = https://github.com/messa/bloom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    bloom = bloom:bloom_main

[options.extras_require]
test =
    pytest
